Update: 提交统一版本

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 .idea
+routers/commentsRouter__________Desktop_Go_src_cleverbamboo_com_bee-shop-b2c_api.go
+routers/commentsRouter__________Desktop_Go_src_cleverbamboo_com_bee-shop-b2c_controllers.go
+bee-shop-b2c.exe
