--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 .idea
+bee-shop-b2c
+bee-shop-b2c.exe
+routers/commentsRouter_api.go
+routers/commentsRouter_controllers.go
 routers/commentsRouter__________Desktop_Go_src_cleverbamboo_com_bee-shop-b2c_api.go
 routers/commentsRouter__________Desktop_Go_src_cleverbamboo_com_bee-shop-b2c_controllers.go
-bee-shop-b2c.exe
+routers/commentsRouter___________________Users_cleverbamboo_GoProjects_src_cleverbamboo_com_bee-shop-b2c_api.go
+routers/commentsRouter___________________Users_cleverbamboo_GoProjects_src_cleverbamboo_com_bee-shop-b2c_controllers.go
