chore: 删除上传的图片文件，并且.gitignore添加static

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ routers/commentsRouter__________Desktop_Go_src_cleverbamboo_com_bee-shop-b2c_api
 routers/commentsRouter__________Desktop_Go_src_cleverbamboo_com_bee-shop-b2c_controllers.go
 routers/commentsRouter___________________Users_cleverbamboo_GoProjects_src_cleverbamboo_com_bee-shop-b2c_api.go
 routers/commentsRouter___________________Users_cleverbamboo_GoProjects_src_cleverbamboo_com_bee-shop-b2c_controllers.go
+static/
