--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,7 +1,6 @@
 appname = "bee-shop-b2c"
 httpport = 8888
 runmode = "dev"
-image_url = "http://localhost:8888"
 
 #*******************
 #Web配置
@@ -25,3 +24,8 @@ sessionon = true
 #MySQL
 #*******************
 sqlconn = "root:123456@tcp(127.0.0.1:3307)/bee-shop-b2c?charset=utf8&loc=Asia%2FShanghai"
+
+#*******************
+#MySQL
+#*******************
+imageUrl = "http://localhost:8888"
